[tool.poetry]
name = "tg-bot-service-sender"
version = "1.1.0"
description = "Telegram handler for Prometheus alerts"
license = "MIT"
authors = ["Arash Hatami <hatamiarash7@gmail.com>"]
maintainers = ["Arash Hatami <hatamiarash7@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hatamiarash7/Prometheus-Telegram"
repository = "https://github.com/hatamiarash7/Prometheus-Telegram"
documentation = "https://github.com/hatamiarash7/Prometheus-Telegram"

[tool.poetry.dependencies]
python = "3.10.5"
uvicorn = "0.34.0"
fastapi = "0.81.0"
httpx = "0.23.0"
python-multipart = "0.0.5"
asyncio = "3.4.3"
cryptg = "0.3.1"
Pillow = "9.2.0"
loguru = "0.7.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hatamiarash7/Prometheus-Telegram/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
